umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_u+3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "U#c+3#u3"} :bonds [] :charge 3 :spin "#u3 #s4"}} :counts {:success true :output {:atoms {"0" "U#c+3#n#u"} :bonds [] :charge 3 :spin "#u1 #s2"}}}
