umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_v+2.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: atomic_ions
atom_typing:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "V#c+2#u3"
    bonds: []
counts:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "V#c+2#n#u"
    bonds: []
